--- a/src/css/base/_global.scss
+++ b/src/css/base/_global.scss
@@ -1,4 +1,3 @@
-img{max-width:100%;height:auto;margin:0}
 .unselectable{cursor:default;-webkit-user-select:none;-moz-user-select:none;-ms-user-select:none;-webkit-touch-callout:none;-khtml-user-select:none}
 
 
