--- a/src/css/reset/_reset.scss
+++ b/src/css/reset/_reset.scss
@@ -44,6 +44,8 @@ embed {max-width: 100%;}
 img {
   border-style: none;
   max-width: 100%;
+  height:auto;
+  margin:0;
 }
 
 /*
